--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "typescript": "^3.9.6"
